cmake_minimum_required (VERSION 3.8)
project(tools)
set(SOURCE_LIST tools.cpp tools.h)
add_library(${PROJECT_NAME}  STATIC ${SOURCE_LIST})
#add_executable(${PROJECT_NAME}  test.cpp ${SOURCE_LIST}) 
target_include_directories(${PROJECT_NAME}  PRIVATE ${ACE_INCLUDE_DIR} ${CPPREST_INCLUDE_DIR})
#target_link_libraries(${PROJECT_NAME}  PRIVATE stdc++fs)
